@@ -96,7 +96,7 @@ from .groups import (ComponentBase, GroupBase,
                      Atom, Residue, Segment,
                      AtomGroup, ResidueGroup, SegmentGroup)
 from .topology import Topology
-from .topologyattrs import AtomAttr, ResidueAttr, SegmentAttr
+from .topologyattrs import AtomAttr, ResidueAttr, SegmentAttr, BFACTOR_WARNING
 from .topologyobjects import TopologyObject
 
 
@@ -774,6 +774,8 @@ class Universe(object):
             they will be aliases of the same attribute.
         """
         if isinstance(topologyattr, str):
+            if topologyattr in ("bfactor", "bfactors"):
+                warnings.warn(BFACTOR_WARNING, DeprecationWarning)
             try:
                 tcls = _TOPOLOGY_ATTRS[topologyattr]
             except KeyError:
@@ -792,16 +794,6 @@ class Universe(object):
                     n_residues=self._topology.n_residues,
                     n_segments=self._topology.n_segments,
                     values=values)
-        alias_pairs = [("bfactors", "tempfactors"),
-                       ("tempfactors", "bfactors")]
-        for a, b in alias_pairs:
-            if topologyattr.attrname == a and hasattr(self._topology, b):
-                err = ("You are adding {a} to a Universe that "
-                       "has {b}. From MDAnalysis version 2.0, {a} "
-                       "and {b} will no longer be separate "
-                       "TopologyAttrs. Instead, they will be aliases "
-                       "of the same attribute.").format(a=a, b=b)
-                warnings.warn(err, DeprecationWarning)
         self._topology.add_TopologyAttr(topologyattr)
         self._process_attr(topologyattr)
 
