@@ -1296,11 +1296,7 @@ class TestEmpty(object):
 
 def test_deprecate_b_tempfactors():
     u = mda.Universe(PDB)
-    with pytest.warns(DeprecationWarning, match="alias"):
-        u.add_TopologyAttr("bfactors")
-
-
-def test_deprecate_temp_bfactors():
-    u = mda.Universe(MMTF)
-    with pytest.warns(DeprecationWarning, match="alias"):
-        u.add_TopologyAttr("tempfactors")
+    values = np.arange(len(u.atoms))
+    with pytest.warns(DeprecationWarning, match="use the tempfactor"):
+        u.add_TopologyAttr("bfactors", values)
+    assert_array_equal(u.atoms.tempfactors, values)
