@@ -189,6 +189,7 @@ Enhancements
     to transfer data from HDF5 file into timestep. (PR #3293)
 
 Changes
+  * Aliased bfactors to tempfactors (Issue #1901, PR#3345)
   * The RDKitParser now raises an error if only part of the atoms have metadata
     on residues (Issue #3318, PR #3325)
   * `analysis.pca.PCA` class now stores `p_components`, `variance`, 
@@ -289,6 +290,9 @@ Changes
   * Writing a TRZ file with no box information now raises a warning (Issue #3307)
 
 Deprecations
+  * Deprecated the `bfactors` topology attribute in favour of `tempfactors`.
+    In 2.0 `bfactors` is simply an alias of `tempfactors`; in 3.0 `bfactors`
+    will be removed. (Issue #1901, PR #3345)
   * The attributes `p_components`, `variance`, `cumulated_variance` and 
     `mean_atoms` in `analysis.pca.PCA` are now deprecated in favour of 
     `results.p_components`, `results.variance`, `results.cumulated_variance` 
